# routes/web.php
@@ -44,3 +44,7 @@ Route::post('users/{username}/edit', 'User\UserController@editUser')->name('edit
 
 //Notifications
 Route::get('api/notifications', 'Notifications\NotificationController@get')->name('notifications');
+Route::get('api/notifications/past', 'Notifications\NotificationController@getPast')->name('pastNotifications');
+Route::post('api/notifications/read', 'Notifications\NotificationController@read')->name('readNotifications');
+Route::post('api/notifications/{id}', 'Notifications\NotificationController@edit')->name('editNotifcation');
+Route::delete('api/notifications/{id}', 'Notifications\NotificationController@delete');
